--- a/source/sass/blocks/goods.scss
+++ b/source/sass/blocks/goods.scss
@@ -18,13 +18,14 @@
   font-weight: 400;
   line-height: 24px;
   color: var(--primary-color);
-  padding-top: 51px;
+  padding-top: 16px;
   padding-bottom: 15px;
   display: inline-block;
   margin-top: 0;
   position: relative;
   --air-gap: 20px;
   --line-color: #68b738;
+  --line-thickness: 2px;
   width: fit-content;
 
   @media (--not-mobile) {
@@ -40,42 +41,71 @@
   @media (--desktop) {
     margin-top: 0;
     padding-bottom: 0;
-    margin-bottom: 78px;
+    margin-bottom: 70px;
     padding-left: 0;
   }
 
-  &::after {
-    content: "";
-    top: 68px;
-    position: absolute;
-    background-color: var(--line-color);
-    left: calc(100% + var(--air-gap));
-    width: calc(100vh - 100% - var(--air-gap));
-    height: 2px;
-    box-shadow: calc(100vw + var(--air-gap)) 0 0 0 var(--line-color);
+  // &::after {
+  //   content: "";
+  //   top: 68px;
+  //   position: absolute;
+  //   background-color: var(--line-color);
+  //   left: calc(100% + var(--air-gap));
+  //   width: calc(100vh - 100% - var(--air-gap));
+  //   height: 2px;
+  //   box-shadow: calc(100vw + var(--air-gap)) 0 0 0 var(--line-color);
 
-    @media (--not-mobile) {
-      // box-shadow: calc(100vw - var(--air-gap)) 0 0 0 var(--line-color);
-      // left: calc(100% + 1px);
-      // width: 100vw;
-      // height: 2px;
-      width: calc(100vh + 100% - var(--air-gap));
-      top: 94px;
-    }
-  }
+  //   @media (--not-mobile) {
+  //     // box-shadow: calc(100vw - var(--air-gap)) 0 0 0 var(--line-color);
+  //     // left: calc(100% + 1px);
+  //     // width: 100vw;
+  //     // height: 2px;
+  //     width: calc(100vh + 100% - var(--air-gap));
+  //     top: 94px;
+  //   }
+  // }
 
   &::before {
     content: "";
     position: absolute;
+    inset-block: calc((100% - 2px) / 2);
+    inset-inline-end: calc(100% + 20px);
+    block-size: 2px;
+    inline-size: calc(100vw - 100% - 20px);
+    background-color: var(--line-color);
+    box-shadow: calc(100vw + 20px) 0 0 0 var(--line-color);
 
     @media (--not-mobile) {
-      background-color: #68b738;
-      top: 94px;
-      width: 100vw;
-      height: 2px;
-      right: calc(100% - 10px);
+      inset-inline-end: calc(100% - 3px);
+      inline-size: calc(100vw - 100% + 30px);
+      top: 75%;
+    }
+
+    @media (--desktop) {
+      inset-inline-end: calc(100% + 30px);
+      inline-size: calc(100vw - 100% - 8px);
+      top: 80%;
     }
   }
+
+  // &::before {
+  //   content: "";
+  //   top: 68px;
+  //   position: absolute;
+  //   background-color: var(--line-color);
+  //   left: calc(100% - var(--air-gap));
+  //   width: calc(100vh - 100% - var(--air-gap));
+  //   height: 2px;
+  //   box-shadow: calc(100vw + var(--air-gap)) 0 0 0 var(--line-color);
+
+  //   @media (--not-mobile) {
+  //     background-color: #68b738;
+  //     top: 94px;
+  //     width: 100vw;
+  //     height: 2px;
+  //     right: calc(100% - 10px);
+  //   }
+  // }
 }
 
 .goods__list {
