--- a/source/templates/contacts.twig
+++ b/source/templates/contacts.twig
@@ -3,7 +3,7 @@
     <h2 class="visually-hidden">Наш адрес</h2>
     <div class="contacts__informative">
       <p class="contacts__advertisement">
-        приглашаем к сотрудничеству дилеров!
+        приглашаем </br> к сотрудничеству дилеров!
       </p>
     </div>
     <address class="contacts__address">
