--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,3 +1,19 @@
+.form {
+  padding-inline: 20px;
+
+  @media (--not-mobile) {
+    padding-inline: 70px;
+    padding-bottom: 38px;
+  }
+
+  @media (--desktop) {
+    margin-inline: auto;
+    width: 1220px;
+    padding-inline: 0;
+    padding-bottom: 53px;
+  }
+}
+
 .form__content-wrapper {
   @media (--not-mobile) {
     padding-left: 30px;
@@ -12,9 +28,21 @@
 
 .form__group {
   border: none;
+  padding: 0;
 
   @media (--not-mobile) {
     margin-bottom: 15px;
+  }
+
+  &--info-pet {
+    @media (--not-mobile) {
+      padding-top: 10px;
+      margin-bottom: 48px;
+    }
+
+    @media (--desktop) {
+      margin-bottom: 0;
+    }
   }
 }
 
@@ -23,6 +51,7 @@
     display: grid;
     grid-template-columns: repeat(2, 570px);
     column-gap: 80px;
+    margin-bottom: 20px;
   }
 }
 
@@ -52,10 +81,14 @@
   }
 
   &--contacts {
-    padding-top: 26px;
+    // padding-top: 26px;
 
     @media (--not-mobile) {
-      padding-bottom: 30px;
+      padding-bottom: 20px;
+    }
+
+    @media (--desktop) {
+      padding-bottom: 20px;
     }
   }
 
@@ -63,7 +96,7 @@
     @media (--not-mobile) {
       padding-top: 30px;
       padding-bottom: 0;
-      margin-bottom: 68px;
+      margin-bottom: 36px;
     }
 
     @media (--desktop) {
@@ -73,7 +106,9 @@
 
   &--addons {
     @media (--desktop) {
-      padding-top: 49px;
+      padding-top: 0;
+      margin-bottom: 18px;
+      padding-bottom: 0;
     }
   }
 }
@@ -84,33 +119,34 @@
   --line-color: #68b738;
   width: fit-content;
 
-  &::after {
-    content: "";
-    // z-index: -2;
-    // top: 60px;
-    // left: calc(100% + 30px);
-    top: 50%;
-    position: absolute;
-    background-color: var(--line-color);
-    left: calc(100% + var(--air-gap));
-    width: calc(100vh + 100% - var(--air-gap));
-    height: 2px;
-    box-shadow: calc(100vw + var(--air-gap)) 0 0 0 var(--line-color);
+  // &::after {
+  //   content: "";
+  //   position: absolute;
+  //   inset-block: calc((100% - 2px) / 2);
+  //   inset-inline-end: calc(100% + 20px);
+  //   block-size: 2px;
+  //   inline-size: calc(100vw - 100% - 20px);
+  //   background-color: var(--line-color);
+  //   box-shadow: calc(100vw + 20px) 0 0 0 var(--line-color);
 
-    @media (--not-mobile) {
-      left: calc(100% + 30px);
-    }
-  }
+  //   @media (--not-mobile) {
+  //     left: calc(100% + 30px);
+  //   }
+  // }
 
   &::before {
     content: "";
-    z-index: -2;
-    right: calc(100% + 30px);
-    top: 50%;
-    width: 100vw;
-    height: 2px;
-    background-color: #68b738;
     position: absolute;
+    inset-block: calc((100% - 2px) / 2);
+    inset-inline-end: calc(100% + 20px);
+    block-size: 2px;
+    inline-size: calc(100vw - 100% - 20px);
+    background-color: var(--line-color);
+    box-shadow: calc(100vw + 20px) 0 0 0 var(--line-color);
+
+    @media (--not-mobile) {
+      top: 77%;
+    }
   }
 }
 
@@ -131,15 +167,15 @@
 }
 
 .form__label {
-  position: relative;
-  margin-bottom: 12px;
   display: flex;
   width: 100%;
   white-space: nowrap;
   align-items: center;
+  position: relative;
+  margin-bottom: 17px;
 
   @media (--not-mobile) {
-    margin-bottom: 19px;
+    margin-bottom: 22px;
   }
 
   @media (--desktop) {
@@ -149,12 +185,13 @@
   &--radio {
     display: grid;
     grid-template-columns: 1.5em auto;
-    gap: 15px;
+    gap: 25px;
+    margin-bottom: 0;
+    height: 47px;
 
     @media (--not-mobile) {
       grid-template-columns: 6% auto;
-      gap: 20px;
-      margin-bottom: 0;
+      height: 52px;
     }
   }
 }
@@ -201,22 +238,28 @@
   @media (--not-mobile) {
     width: 40px;
     height: 40px;
-    margin-bottom: 12px;
+    margin-bottom: 25px;
   }
 
   &:focus {
     outline: max(2px, 0.15em) solid currentcolor;
     outline-offset: max(2px, 0.15em);
   }
+
+  @media (--desktop) {
+    margin-bottom: 27px;
+  }
 }
 
 .form__contacts {
-  display: flex;
-  justify-content: space-between;
+  // display: flex;
+  // justify-content: space-between;
+  margin-bottom: 5px;
 
   @media (--not-mobile) {
     padding-bottom: 0;
     margin-bottom: 12px;
+    padding-top: 23px;
   }
 
   @media (--desktop) {
@@ -225,20 +268,48 @@
   }
 }
 
+.form__title-wrapper {
+  position: relative;
+  --line-color: #68b738;
+  width: fit-content;
+
+  &::before {
+    content: "";
+    position: absolute;
+    inset-block: calc((100% - 2px) / 2);
+    inset-inline-end: calc(100% + 20px);
+    block-size: 2px;
+    inline-size: calc(100vw - 100% - 40px);
+    background-color: var(--line-color);
+    box-shadow: calc(100vw + 20px) 0 0 0 var(--line-color);
+    top: 36%;
+
+    @media (--not-mobile) {
+      top: 44%;
+    }
+
+    @media (--desktop) {
+      top: 53%;
+    }
+  }
+}
 
 .form__input {
   box-sizing: border-box;
   border: 1px solid #e7e7ee;
-  padding-top: 13px;
+  padding-top: 0;
   padding-left: 15px;
-  padding-bottom: 13px;
+  padding-bottom: 15px;
   width: 100%;
   margin-left: 15px;
   transform: translateY(15%);
-  height: 57px;
+  height: 45px;
 
   @media (--not-mobile) {
-    padding-bottom: 25px;
+    padding-bottom: 8px;
+    padding-top: 8px;
+    height: 52px;
+    padding-left: 25px;
   }
 
   @media (--desktop) {
@@ -264,7 +335,7 @@
   &--email,
   &--phone {
     @media (--not-mobile) {
-      margin-left: 30px;
+      margin-left: 18px;
     }
   }
 }
@@ -302,41 +373,64 @@
   }
 }
 
-.form__filter-radio {
-  display: flex;
-  flex-direction: column;
-  border: 0;
-  padding-top: 20px;
-  padding-bottom: 20px;
+.form__filter {
+  &--radio {
+    display: flex;
+    flex-direction: column;
+    border: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
 
-  @media (--not-mobile) {
-    padding-top: 25px;
-    padding-bottom: 0;
-    margin-bottom: 45px;
+    @media (--not-mobile) {
+      padding-top: 25px;
+      padding-bottom: 0;
+      margin-bottom: 45px;
+    }
+
+    @media (--desktop) {
+      margin: 0;
+      padding: 0;
+      margin-bottom: 0;
+    }
   }
 
-  @media (--desktop) {
-    margin: 0;
-    padding: 0;
+  &--border {
+    border-top: 1px solid #e7e7e7;
+    border-bottom: 1px solid #e7e7e7;
+    margin-left: calc(20px * -1);
+    margin-right: calc(20px * -1);
+    margin-bottom: 27px;
+    padding-bottom: 0;
+
+    @media (--not-mobile) {
+      padding-top: 0;
+      margin-bottom: 40px;
+      width: 570px;
+    }
+
+    @media (--desktop) {
+      border: none;
+      margin-bottom: 0;
+      margin-left: auto;
+    }
   }
 }
 
 .form__filter-wrapper {
-  border-top: 1px solid #e7e7e7;
-  border-bottom: 1px solid #e7e7e7;
-
   @media (--not-mobile) {
     border-right: 1px solid #e7e7e7;
     border-left: 1px solid #e7e7e7;
-    padding-top: 13px;
-    padding-left: 20px;
-    padding-bottom: 20px;
+    padding-top: 18px;
+    padding-left: 30px;
+    padding-bottom: 37px;
   }
 
   @media (--desktop) {
     margin-top: 13px;
-    padding-left: 30px;
-    padding-bottom: 25px;
+    padding-left: 10px;
+    padding-bottom: 30px;
+    border-top: 1px solid #e7e7e7;
+    border-bottom: 1px solid #e7e7e7;
 
     &:first-child {
       padding-top: 20px;
@@ -345,38 +439,48 @@
 }
 
 .form__comments {
+  margin-bottom: 0;
+
   @media (--desktop) {
-    margin-bottom: 43px;
+    margin-bottom: 50px;
   }
 }
 
 .form__feedback {
   width: 100%;
   height: 150px;
+  padding-top: 10px;
+  padding-left: 15px;
 
   @media (--not-mobile) {
     height: 174px;
     padding-top: 10px;
-    padding-left: 25px;
+    padding-left: 20px;
   }
 
   @media (--desktop) {
-    padding-top: 20px;
+    padding-top: 15px;
     padding-left: 20px;
     min-height: auto;
   }
+}
+
+.form__add-ons {
+  margin-bottom: 0;
 }
 
 .form__addons-list {
   list-style: none;
   padding: 0;
   margin: 0;
+  margin-bottom: 25px;
 
   @media (--not-mobile) {
     display: grid;
     grid-template-columns: repeat(2, minmax(285px, 500px));
-    row-gap: 32px;
+    row-gap: 20px;
     column-gap: 60px;
+    margin-bottom: 35px;
   }
 
   @media (--desktop) {
@@ -403,6 +507,7 @@
   display: grid;
   grid-template-columns: 2em auto;
   gap: 19px;
+  margin-bottom: 0;
 }
 
 .form__checkbox {
@@ -448,10 +553,14 @@
 .form__button {
   width: 100%;
   height: 40px;
+  margin-bottom: 15px;
 
   @media (--not-mobile) {
-    width: 282px;
+    width: 44%;
     height: 52px;
+    font-size: 20px;
+    line-height: 0;
+    padding: 14px 14px;
   }
 
   @media (--desktop) {
@@ -462,8 +571,12 @@
 }
 
 .form__required-text {
-  margin-left: 20px;
-  font-size: 16px;
+  margin-left: 60px;
+  font-size: 14px;
   line-height: 16px;
   font-family: var(--main-font);
+
+  @media (--not-mobile) {
+    font-size: 16px;
+  }
 }
