--- a/source/sass/blocks/profile.scss
+++ b/source/sass/blocks/profile.scss
@@ -1,4 +1,6 @@
 .profile__heading {
+  margin-bottom: 35px;
+
   @media (--not-mobile) {
     margin-bottom: 53px;
   }
@@ -10,9 +12,9 @@
   font-weight: 400;
   line-height: 36px;
   color: var(--primary-color);
-  border-top: 1px solid #d9d9d9;
-  padding-top: 27px;
-  padding-bottom: 37px;
+  // border-top: 1px solid #d9d9d9;
+  padding-top: 20px;
+  padding-bottom: 35px;
   margin: 0;
 
   @media (--not-mobile) {
@@ -41,7 +43,7 @@
   color: var(--primary-color);
   text-transform: uppercase;
   margin: 0;
-  margin-bottom: 35px;
+  margin-bottom: 25px;
   max-width: 250px;
 
   @media (--not-mobile) {
