--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -61,6 +61,10 @@
   @media (--not-mobile) {
     display: grid;
   }
+
+  @media (--desktop) {
+    margin-top: 20px;
+  }
 }
 
 .form__legend {
@@ -406,6 +410,9 @@
       padding-top: 0;
       margin-bottom: 40px;
       width: 570px;
+      margin-left: 0;
+      margin-right: 0;
+      border: none;
     }
 
     @media (--desktop) {
@@ -418,8 +425,8 @@
 
 .form__filter-wrapper {
   @media (--not-mobile) {
-    border-right: 1px solid #e7e7e7;
-    border-left: 1px solid #e7e7e7;
+    border: 1px solid #e7e7e7;
+    // border-left: 1px solid #e7e7e7;
     padding-top: 18px;
     padding-left: 30px;
     padding-bottom: 37px;
@@ -429,8 +436,8 @@
     margin-top: 13px;
     padding-left: 10px;
     padding-bottom: 30px;
-    border-top: 1px solid #e7e7e7;
-    border-bottom: 1px solid #e7e7e7;
+    // border-top: 1px solid #e7e7e7;
+    // border-bottom: 1px solid #e7e7e7;
 
     &:first-child {
       padding-top: 20px;
