--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -22,24 +22,37 @@
     padding-right: 0;
   }
 
-  &--index::after {
-    @media (--desktop) {
-      content: "";
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 50%;
-      height: 697px;
-      background-image: url("../../img/index-banner.jpg"), linear-gradient(#65a83d, #62a53b);
-      background-repeat: no-repeat;
-      background-size: auto 720px;
-      background-position-x: right;
-      z-index: -1;
-      background-color: #68b738;
+  &--index {
+    &::after {
+      @media (--desktop) {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 50%;
+        width: 50%;
+        height: 697px;
+        background-image: url("../../img/index-banner-desktop@1x.jpg"), linear-gradient(#65a83d, #62a53b);
+        background-repeat: no-repeat;
+        z-index: -1;
+        background-color: #68b738;
 
-      @media (min-resolution: --retina-dpi), (min-resolution: --retina-dppx) {
-        background-image: url("../../img/index-banner@2x.jpg"), linear-gradient(#65a83d, #62a53b);
-        background-size: auto 720px;
+        @media (min-resolution: --retina-dpi), (min-resolution: --retina-dppx) {
+          background-image: url("../../img/index-banner-desktop@2x.jpg"), linear-gradient(#65a83d, #62a53b);
+          background-size: auto 720px;
+        }
+      }
+    }
+
+    &::before {
+      @media (--desktop) {
+        content: "";
+        position: absolute;
+        width: 50%;
+        top: 0;
+        right: 0;
+        height: 697px;
+        background-image: linear-gradient(#65a83d, #62a53b);
+        z-index: -1;
       }
     }
   }
