--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -16,14 +16,14 @@
     top: 0;
     left: 0;
     height: 300px;
-    background-image: url("../../img/m-banner.jpg"), linear-gradient(#65a83d, #62a53b);
+    background-image: url("../../img/index-banner-mobile@1x.jpg"), linear-gradient(#65a83d, #62a53b);
     background-size: contain, 100%;
     background-position: top center;
     background-repeat: no-repeat;
     z-index: -1;
 
     @media (min-resolution: --retina-dpi), (min-resolution: --retina-dppx) {
-      background-image: url("../../img/m-banner@2x.jpg"), linear-gradient(#65a83d, #62a53b);
+      background-image: url("../../img/index-banner-mobile@2x.jpg"), linear-gradient(#65a83d, #62a53b);
     }
 
     @media (--not-mobile) {
