--- a/source/sass/blocks/promotions.scss
+++ b/source/sass/blocks/promotions.scss
@@ -12,14 +12,14 @@
 .promotions__container {
   display: flex;
   flex-direction: column;
-  background-image: url("../../img/bg-promotions.jpg");
+  background-image: url("../../img/bg-promotions-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   padding: 58px 60px 43px;
   margin-top: 35px;
 
   @media (min-resolution: --retina-dpi), (min-resolution: --retina-dppx) {
-    background-image: url("../../img/bg-promotions@2x.jpg");
+    background-image: url("../../img/bg-promotions-mobile@2x.jpg");
   }
 
   @media (--not-mobile) {
@@ -28,7 +28,7 @@
     min-width: 708px;
     width: 100%;
     margin-top: 65px;
-    background-image: url("../../img/bg-promotions-tablet.jpg");
+    background-image: url("../../img/bg-promotions-tablet@1x.jpg");
     margin-bottom: 65px;
     padding-bottom: 60px;
 
@@ -42,12 +42,12 @@
     min-width: auto;
     margin-top: 0;
     flex-direction: column;
-    background-image: url("../../img/bg-promotions.jpg");
+    background-image: url("../../img/bg-promotions-mobile@1x.jpg");
     background-size: cover;
     padding-bottom: 40px;
 
     @media (min-resolution: --retina-dpi), (min-resolution: --retina-dppx) {
-      background-image: url("../../img/bg-promotions@2x.jpg");
+      background-image: url("../../img/bg-promotions-mobile@2x.jpg");
       background-size: 245px auto;
     }
   }
