--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -7,10 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ pages[pageId].name }} | Cat Energy | HTML Academy</title>
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="icon" href="favicon.ico" sizes="any"><!-- 32×32 -->
+  <link rel="icon" href="./favicon.ico" sizes="any">
   <link rel="icon" href="./favicons/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="./favicons/apple-touch-icon.png"><!-- 180×180 -->
-  <link rel="manifest" href="/manifest.webmanifest">
+  <link rel="apple-touch-icon" href="./favicons/apple-touch-icon.png">
+  <link rel="manifest" href="./manifest.webmanifest">
   </head>
 
 <body class="page__body">
