--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ pages[pageId].name }} | Cat Energy | HTML Academy</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="preload" href="./fonts/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <link rel="icon" href="./favicon.ico" sizes="any">
   <link rel="icon" href="./favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="./favicons/apple-touch-icon.png">
