--- a/source/sass/blocks/goods-button.scss
+++ b/source/sass/blocks/goods-button.scss
@@ -10,7 +10,8 @@
   }
 
   @media (--desktop) {
-    width: 244px;
-    height: 40px;
+    max-width: 244px;
+    width: 100%;
+    height: auto;
   }
 }
