--- a/source/sass/blocks/motivation.scss
+++ b/source/sass/blocks/motivation.scss
@@ -41,6 +41,7 @@
 
   @media (--desktop) {
     margin-bottom: 0;
+    max-width: 40%;
   }
 }
 
@@ -219,6 +220,7 @@
 
   @media (--desktop) {
     background-image: linear-gradient(180deg, #ffffff 130px, #eaeaea 127px);
+    max-width: 60%;
   }
 
   &::before {
@@ -309,7 +311,8 @@
   margin: 0 auto;
 
   @media (--not-mobile) {
-    width: 592px;
+    max-width: 592px;
+    width: 100%;
   }
 }
 
