--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -206,6 +206,7 @@
   display: inline-block;
   margin-top: 20px;
   padding-bottom: 20px;
+  max-width: 50%;
 
   @media (--not-mobile) {
     font-size: 20px;
