--- a/source/sass/blocks/goods.scss
+++ b/source/sass/blocks/goods.scss
@@ -1,8 +1,11 @@
 .goods {
+  padding-bottom: 20px;
+
   @media (--desktop) {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 17px;
+    padding-bottom: 0;
   }
 }
 
@@ -18,8 +21,7 @@
   font-weight: 400;
   line-height: 24px;
   color: var(--primary-color);
-  padding-top: 16px;
-  padding-bottom: 15px;
+  padding: 20px 0 15px;
   display: inline-block;
   margin-top: 0;
   position: relative;
