--- a/source/sass/blocks/more-goods.scss
+++ b/source/sass/blocks/more-goods.scss
@@ -14,7 +14,7 @@
   @media (--desktop) {
     width: 100%;
     max-width: 896px;
-    padding-top: 0;
+    padding-top: 15px;
   }
 }
 
@@ -29,8 +29,10 @@
   }
 
   @media (--desktop) {
-    max-width: 46%;
+    max-width: 32%;
     width: 100%;
+    margin-left: auto;
+    margin-right: 40px;
   }
 }
 
@@ -85,6 +87,9 @@
   @media (--not-mobile) {
     margin-right: 50px;
     max-width: 46%;
+    text-align: right;
+    width: 132px;
+    margin-left: 90px;
   }
 
   @media (--desktop) {
@@ -92,6 +97,7 @@
     width: 100%;
     margin-right: 0;
     margin-left: 0;
+    text-align: left;
   }
 }
 
@@ -107,7 +113,5 @@
   @media (--desktop) {
     max-width: 40%;
     width: 100%;
-    margin-right: 40px;
-    margin-left: auto;
   }
 }
