--- a/source/sass/blocks/motivation.scss
+++ b/source/sass/blocks/motivation.scss
@@ -186,7 +186,7 @@
     @media (--desktop) {
       margin-left: 0;
       flex-direction: row;
-      margin-top: 30px;
+      margin-top: 15px;
     }
   }
 
@@ -200,10 +200,14 @@
 }
 
 .motivation__wrapper {
+  @media (--not-moble) {
+    margin-bottom: 30px;
+  }
+
   @media (--desktop) {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 30px;
+    padding-bottom: 18px;
   }
 }
 
@@ -216,6 +220,7 @@
     --curtain: 0.5;
 
     background-image: linear-gradient(180deg, #ffffff 170px, #eaeaea 170px);
+    padding-bottom: 15px;
   }
 
   @media (--desktop) {
@@ -246,7 +251,7 @@
   @media (--not-mobile) {
     width: 590px;
     height: 511px;
-    margin-bottom: 35px;
+    margin-bottom: 30px;
     background-image: linear-gradient(#ffffff 170px, #eaeaea 170px);
   }
 
