--- a/source/sass/blocks/profile.scss
+++ b/source/sass/blocks/profile.scss
@@ -4,17 +4,20 @@
   @media (--not-mobile) {
     margin-bottom: 53px;
   }
+
+  @media (--desktop) {
+    margin-bottom: 50px;
+  }
 }
 
 .profile__title {
-  font-family: var(--accent-font); //changed
+  font-family: var(--accent-font);
   font-size: var(--title-fs);
   font-weight: 400;
   line-height: 36px;
   color: var(--primary-color);
-  // border-top: 1px solid #d9d9d9;
-  padding-top: 20px;
-  padding-bottom: 35px;
+  padding-top: 25px;
+  padding-bottom: 40px;
   margin: 0;
 
   @media (--not-mobile) {
@@ -22,15 +25,15 @@
     line-height: 60px;
     font-weight: 400;
     margin-left: 40px;
-    padding-top: 40px;
-    padding-bottom: 56px;
+    padding-top: 50px;
+    padding-bottom: 55px;
     border-top: none;
   }
 
   @media (--desktop) {
     margin-left: 7px;
-    padding-top: 50px;
-    padding-bottom: 54px;
+    padding-top: 63px;
+    padding-bottom: 55px;
     border-top: none;
   }
 }
@@ -57,6 +60,6 @@
 
   @media (--desktop) {
     margin-left: 7px;
-    margin-bottom: 50px;
+    margin-bottom: 45px;
   }
 }
