--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -13,8 +13,8 @@
   display: grid;
 
   @media (--not-mobile) {
-    row-gap: 52px;
-    column-gap: 60px;
+    row-gap: 60px;
+    column-gap: 55px;
     grid-template-columns: repeat(auto-fill, minmax(324px, 1fr));
   }
 
@@ -89,6 +89,10 @@
   display: flex;
   text-decoration: none;
   align-items: flex-end;
+
+  @media (--not-mobile) {
+    justify-content: center;
+  }
 
   &--more-svg {
     padding-top: 20px;
@@ -178,6 +182,7 @@
 
   @media (--desktop) {
     min-width: 180px;
+    padding-left: 10px;
   }
 }
 
@@ -193,9 +198,7 @@
 
   @media (--not-mobile) {
     max-width: 145px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 18px;
+    margin: 18px 0 18px;
     font-size: 20px;
     line-height: 24px;
     text-align: center;
@@ -254,7 +257,7 @@
     width: 161px;
     height: 172px;
     margin-top: 40px;
-    margin-bottom: 15px;
+    margin-bottom: 14px;
   }
 
   @media (--desktop) {
@@ -270,8 +273,8 @@
     @media (--not-mobile) {
       width: 168px;
       height: 200px;
-      margin-top: 12px;
-      margin-bottom: 12px;
+      margin-top: 16px;
+      margin-bottom: 5px;
     }
 
     @media (--desktop) {
