--- a/source/sass/blocks/footer-social.scss
+++ b/source/sass/blocks/footer-social.scss
@@ -2,6 +2,7 @@
   list-style: none;
   padding: 0;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   border-top: 1px solid #d9d9d9;
   border-bottom: 1px solid #d9d9d9;
