--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,15 +1,3 @@
-// .main-nav {
-//   // @media (--not-mobile) {
-//   //   flex-wrap: wrap;
-//   //   justify-content: space-between;
-//   //   width: 440px;
-//   // }
-
-//   // @media (--desktop) {
-//   //   width: 478px;
-//   // }
-// }
-
 .main-nav__toggle {
   display: block;
   background-color: transparent;
@@ -97,6 +85,7 @@
     display: flex;
     position: relative;
     flex-direction: row;
+    flex-wrap: wrap;
     top: auto;
     width: 440px;
     justify-content: space-between;
@@ -134,6 +123,7 @@
     border-top: none;
     padding: 0;
     width: auto;
+    margin-right: 5px;
 
     &--current::after {
       content: "";
@@ -225,7 +215,7 @@
 
   @media (--not-mobile) {
     justify-content: space-between;
-    padding: 25px 29px 20px;
+    padding: 26px 29px 15px 31px;
   }
 
   @media (--desktop) {
