--- a/source/sass/blocks/motivation.scss
+++ b/source/sass/blocks/motivation.scss
@@ -12,7 +12,7 @@
 }
 
 .motivation__title {
-  font-family: var(--accent-font); //changes
+  font-family: var(--accent-font);
   font-size: var(--title-fs);
   line-height: 40px;
   color: var(--primary-color);
@@ -24,7 +24,7 @@
     font-size: var(--title-big);
     line-height: 60px;
     font-weight: 400;
-    padding-top: 48px;
+    padding-top: 46px;
     margin-bottom: 60px;
   }
 
@@ -219,7 +219,7 @@
   @media (--not-mobile) {
     --curtain: 0.5;
 
-    background-image: linear-gradient(180deg, #ffffff 170px, #eaeaea 170px);
+    background-color: transparent;
     padding-bottom: 15px;
   }
 
@@ -230,13 +230,20 @@
 
   &::before {
     @media (--not-mobile) {
-      left: calc((50vw - var(--tablet-content) /2 ) * -1);
+      content: "";
+      position: absolute;
+      top: 170px;
+      bottom: 0;
+      left: -100vw;
+      background: #eaeaea;
+      box-shadow: 100vw 0 0 0 #eaeaea;
+      z-index: -2;
     }
-  }
 
-  &::after {
-    @media (--not-mobile) {
-      right: calc((50vw - var(--tablet-content) /2 ) * -1);
+    @media (--desktop) {
+      background-image: none;
+      width: 0;
+      height: 0;
     }
   }
 }
@@ -252,7 +259,6 @@
     width: 590px;
     height: 511px;
     margin-bottom: 30px;
-    background-image: linear-gradient(#ffffff 170px, #eaeaea 170px);
   }
 
   @media (--desktop) {
@@ -264,26 +270,6 @@
 
 .motivation__before-wrapper {
   grid-area: 1 / 1 / 2 / 2;
-}
-
-.motivation__example-container::before,
-.motivation__example-container::after {
-  --tablet-content: 708px;
-
-  @media (--not-mobile) {
-    content: "";
-    position: absolute;
-    top: 0;
-    height: 100%;
-    width: calc(50vw - var(--tablet-content) / 2);
-    background-image: linear-gradient(180deg, #ffffff 170px, #eaeaea 170px);
-  }
-
-  @media (--desktop) {
-    background-image: none;
-    width: 0;
-    height: 0;
-  }
 }
 
 .motivation__before-img {
