--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -35,13 +35,10 @@
 }
 
 .programs__item-wrapper {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 0 20px 20px;
 
   @media (--not-mobile) {
-    padding-left: 52px;
-    padding-top: 22px;
-    padding-right: 32px;
+    padding: 22px 32px 52px 55px;
   }
 
   @media (--desktop) {
@@ -78,7 +75,7 @@
       background-size: 200px 211px;
       float: right;
       margin-top: 63px;
-      margin-left: 74px;
+      margin-left: 69px;
       margin-right: 30px;
     }
 
@@ -105,7 +102,7 @@
       width: 269px;
       height: 267px;
       float: right;
-      margin-left: 32px;
+      margin-left: 10px;
       margin-top: 31px;
     }
 
@@ -128,8 +125,8 @@
   color: var(--primary-color);
   text-transform: uppercase;
   margin-left: 71px;
-  margin-top: 30px;
-  margin-bottom: 35px;
+  margin-top: 32px;
+  margin-bottom: 31px;
 
   @media (--not-mobile) {
     font-size: var(--title-fs);
@@ -160,7 +157,7 @@
     @media (--desktop) {
       padding-left: 194px;
       padding-bottom: 0;
-      margin-bottom: 76px;
+      margin-bottom: 68px;
       padding-top: 45px;
     }
   }
@@ -195,7 +192,6 @@
 }
 
 .programs__link {
-  position: relative;
   font-family: var(--accent-font); //changed
   font-weight: 400;
   font-size: 16px;
@@ -203,15 +199,20 @@
   color: var(--primary-color);
   text-decoration: none;
   text-transform: uppercase;
-  display: inline-block;
-  margin-top: 20px;
-  padding-bottom: 20px;
-  max-width: 50%;
+  margin-top: 14px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
 
   @media (--not-mobile) {
+    gap: 20px;
     font-size: 20px;
     line-height: 30px;
-    padding-bottom: 55px;
+    margin-top: 22px;
+  }
+
+  @media (--not-mobile) {
+    gap: 30px;
   }
 
   &--weight {
@@ -219,36 +220,25 @@
       padding-left: 30px;
     }
   }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .programs__link--arrow {
   &::after {
     content: "";
-    position: absolute;
-    background-image: url("../../icons/sprite.svg#arrow-right");
-    background-size: cover;
-    width: 24px;
-    height: 24px;
-    top: 18%;
-    right: -40px;
-    transform: translateY(-50%);
-    transition: all 0.1s linear;
-    background-repeat: no-repeat;
-
-    @media (--not-mobile) {
-      right: -52px;
-    }
-  }
-
-  &:hover::after {
     background-image: url("../../icons/sprite.svg#arrow-long");
     background-size: cover;
     width: 32px;
     height: 24px;
-    right: -52px;
+    transition: all 0.1s linear;
+    background-repeat: no-repeat;
+    background-position-x: -8px;
+  }
 
-    @media (--not-mobile) {
-      right: -64px;
-    }
+  &:hover::after {
+    background-position-x: 0;
   }
 }
