--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -26,3 +26,4 @@
 @import "./blocks/promotions.scss";
 @import "./blocks/profile.scss";
 @import "./blocks/form.scss";
+@import "./blocks/form-profile.scss";
