--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -3,7 +3,7 @@
     <picture>
       <source media="(min-width: 1280px)" srcset="./img/logo.svg#desktop">
       <source media="(min-width: 768px)" srcset="./img/logo.svg#tablet">
-      <img class="logo__image" src="./img/logo.svg#mobile" width="34" height="39" alt="cat energy">
+      <img class="logo" src="./img/logo.svg#mobile" width="34" height="39" alt="cat energy">
     </picture>
   </a>
 
