--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -9,3 +9,19 @@ img {
 *::after {
   box-sizing: border-box;
 }
+
+:focus {
+  outline: 2px solid #000000;
+  outline-offset: 2px;
+}
+
+@supports selector(:focus-visible) {
+  :focus {
+    outline: 0;
+  }
+}
+
+:focus-visible {
+  outline: 2px solid #000000;
+  outline-offset: 2px;
+}
